# haxir

./: .gitignore  LICENSE  README.md  mix.exs
config/: config.exs
lib/haxir/: abstractor.ex  api.ex  application.ex  browser.ex  consumer.ex  helper.ex  native.ex  producer.ex  roomState.ex  router.ex  socket.ex  test_consumer.ex
lib/haxir/socket/: handler.ex  socket.ex  supervisor.ex
lib/haxir/struct/: disc.ex  player.ex  scores.ex
lib/mix/tasks/haxir/: setup.ex
native/haxir/: Cargo.toml
native/haxir/src/: haxball.rs  lib.rs
priv/frontend/: package-lock.json  package.json  tsconfig.json
priv/frontend/src/: bot.ts  index.ts
test/: haxir_test.exs  helper_test.exs  test_helper.exs
