[package]
name = "haxir"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "haxir"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
tokio = { version = "1", features = ["full"] }
once_cell = "1.2.0"
serde_json = "1.0"
